--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -241,7 +241,7 @@
     "Dear user": "\u0423\u0432\u0430\u0436\u0430\u0435\u043c\u0438 \u0433\u043e\u0441\u043f\u043e\u0434\u0438\u043d\u0435, / \u0423\u0432\u0430\u0436\u0430\u0435\u043c\u0430 \u0433\u043e\u0441\u043f\u043e\u0436\u043e,",
     "Your company's name": "\u0418\u043c\u0435 \u043d\u0430 \u0444\u0438\u0440\u043c\u0430\u0442\u0430",
     "Your company's activity": "\u041f\u0440\u0435\u0434\u043c\u0435\u0442 \u043d\u0430 \u0434\u0435\u0439\u043d\u043e\u0441\u0442 \u043d\u0430 \u0444\u0438\u0440\u043c\u0430\u0442\u0430",
-    "Your job's description": "Your job's description",
+    "Your job's description": "\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u043d\u0430 \u0412\u0430\u0448\u0430\u0442\u0430 \u0434\u043b\u044a\u0436\u043d\u043e\u0441\u0442",
     "Company city": "\u0421\u0435\u0434\u0430\u043b\u0438\u0449\u0435 \u043d\u0430 \u0444\u0438\u0440\u043c\u0430\u0442\u0430",
     "Check database connection": "\u041f\u0440\u043e\u0432\u0435\u0440\u043a\u0430 \u043d\u0430 \u0432\u0440\u044a\u0437\u043a\u0430\u0442\u0430 \u043a\u044a\u043c \u0441\u044a\u0440\u0432\u044a\u0440\u0430 \u0437\u0430 \u0431\u0430\u0437\u0438 \u0434\u0430\u043d\u043d\u0438",
     "Step 4 - Database settings": "Step 4 - Database settings",
@@ -295,7 +295,7 @@
     "URL": "URL (\u0430\u0434\u0440\u0435\u0441)",
     "Link name": "\u041d\u0430\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u043d\u0438\u0435 \u043d\u0430 \u0432\u0440\u044a\u0437\u043a\u0430\u0442\u0430",
     "Show link on course homepage": "\u0414\u0430 \u0441\u0435 \u043f\u043e\u043a\u0430\u0437\u0432\u0430 \u0432\u0440\u044a\u0437\u043a\u0430\u0442\u0430 \u0432 <br/>\u043d\u0430\u0447\u0430\u043b\u043d\u0430\u0442\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043d\u0430 \u043a\u0443\u0440\u0441\u0430",
-    "Link's target": "Link's target",
+    "Link's target": "\u041e\u0442\u0432\u0430\u0440\u044f\u043d\u0435 \u043d\u0430 \u0432\u0440\u044a\u0437\u043a\u0430\u0442\u0430",
     "Save link": "\u0417\u0430\u043f\u0438\u0441 \u043d\u0430 \u0432\u0440\u044a\u0437\u043a\u0430\u0442\u0430",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -540,5 +540,6 @@
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
-    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "\u0412\u044a\u0440\u0445\u0443 \u043d\u044f\u043a\u043e\u0438 \u0434\u0438\u0440\u0435\u043a\u0442\u043e\u0440\u0438\u0438 \u0438 \u0444\u0430\u0439\u043b\u043e\u0432\u0435 (\u043d\u0430\u043f\u0440. \u0444\u0430\u0439\u043b\u043e\u0432\u0435\u0442\u0435, \u043a\u0430\u0447\u0435\u043d\u0438 \u043e\u0442 \u043e\u0431\u0443\u0447\u0430\u0432\u0430\u0449\u0438\u0442\u0435 \u0441\u0435, html-\u0444\u0430\u0439\u043b\u043e\u0432\u0435\u0442\u0435 \u043d\u0430 \u043d\u0430\u0447\u0430\u043b\u043d\u0430\u0442\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u0438 \u0434\u0440.) \u0442\u0440\u044f\u0431\u0432\u0430 \u0434\u0430 \u043c\u043e\u0436\u0435 \u0434\u0430 \u0441\u0435 \u0437\u0430\u043f\u0438\u0441\u0432\u0430. \u041c\u043e\u0436\u0435 \u0434\u0430 \u0441\u0435 \u043d\u0430\u043b\u043e\u0436\u0438 \u0440\u044a\u0447\u043d\u043e (\u0438\u0437\u0432\u044a\u043d \u0442\u043e\u0437\u0438 \u0438\u043d\u0442\u0435\u0440\u0444\u0435\u0439\u0441) \u0434\u0430 \u043a\u043e\u043d\u0444\u0438\u0433\u0443\u0440\u0438\u0440\u0430\u0442\u0435 \u0441\u044a\u0440\u0432\u044a\u0440\u0430."
+    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "\u0412\u044a\u0440\u0445\u0443 \u043d\u044f\u043a\u043e\u0438 \u0434\u0438\u0440\u0435\u043a\u0442\u043e\u0440\u0438\u0438 \u0438 \u0444\u0430\u0439\u043b\u043e\u0432\u0435 (\u043d\u0430\u043f\u0440. \u0444\u0430\u0439\u043b\u043e\u0432\u0435\u0442\u0435, \u043a\u0430\u0447\u0435\u043d\u0438 \u043e\u0442 \u043e\u0431\u0443\u0447\u0430\u0432\u0430\u0449\u0438\u0442\u0435 \u0441\u0435, html-\u0444\u0430\u0439\u043b\u043e\u0432\u0435\u0442\u0435 \u043d\u0430 \u043d\u0430\u0447\u0430\u043b\u043d\u0430\u0442\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u0438 \u0434\u0440.) \u0442\u0440\u044f\u0431\u0432\u0430 \u0434\u0430 \u043c\u043e\u0436\u0435 \u0434\u0430 \u0441\u0435 \u0437\u0430\u043f\u0438\u0441\u0432\u0430. \u041c\u043e\u0436\u0435 \u0434\u0430 \u0441\u0435 \u043d\u0430\u043b\u043e\u0436\u0438 \u0440\u044a\u0447\u043d\u043e (\u0438\u0437\u0432\u044a\u043d \u0442\u043e\u0437\u0438 \u0438\u043d\u0442\u0435\u0440\u0444\u0435\u0439\u0441) \u0434\u0430 \u043a\u043e\u043d\u0444\u0438\u0433\u0443\u0440\u0438\u0440\u0430\u0442\u0435 \u0441\u044a\u0440\u0432\u044a\u0440\u0430.",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
