--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -276,7 +276,7 @@
     "E-mail": "\u05d3\u05d5\u05d0\u05e8 \u05d0\u05dc\u05e7\u05d8\u05e8\u05d5\u05e0\u05d9",
     "Your company's name": "\u05e9\u05dd \u05d4\u05d7\u05d1\u05e8\u05d4 \u05e9\u05dc\u05da",
     "Your company's activity": "\u05d4\u05e4\u05e2\u05d9\u05dc\u05d5\u05ea \u05e9\u05dc \u05d4\u05d7\u05d1\u05e8\u05d4 \u05e9\u05dc\u05da",
-    "Your job's description": "Your job's description",
+    "Your job's description": "\u05ea\u05d9\u05d0\u05d5\u05e8 \u05d4\u05ea\u05e4\u05e7\u05d9\u05d3 \u05e9\u05dc\u05da",
     "Your company's home country": "\u05de\u05d3\u05d9\u05e0\u05ea \u05d4\u05d1\u05d9\u05ea \u05e9\u05dc \u05d4\u05d7\u05d1\u05e8\u05d4 \u05e9\u05dc\u05da",
     "Company city": "\u05e2\u05d9\u05e8 \u05d7\u05d1\u05e8\u05d4",
     "Preferred contact language": "\u05e9\u05e4\u05ea \u05d0\u05d9\u05e9 \u05e7\u05e9\u05e8 \u05de\u05d5\u05e2\u05d3\u05e4\u05ea",
@@ -336,7 +336,7 @@
     "Link name": "\u05e9\u05dd \u05e7\u05d9\u05e9\u05d5\u05e8",
     "Show link on course homepage": "\u05d4\u05e6\u05d2 \u05e7\u05d9\u05e9\u05d5\u05e8 \u05d1\u05d3\u05e3 \u05d4\u05d1\u05d9\u05ea \u05e9\u05dc \u05d4\u05e7\u05d5\u05e8\u05e1",
     "Select a category": "\u05d1\u05d7\u05e8 \u05e7\u05d8\u05d2\u05d5\u05e8\u05d9\u05d4",
-    "Link's target": "Link's target",
+    "Link's target": "\u05d4\u05d9\u05e2\u05d3 \u05e9\u05dc \u05d4\u05e7\u05d9\u05e9\u05d5\u05e8",
     "Save link": "\u05e9\u05de\u05d5\u05e8 \u05e7\u05d9\u05e9\u05d5\u05e8",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -615,5 +615,6 @@
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
-    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "\u05d7\u05dc\u05e7 \u05de\u05d4\u05e1\u05e4\u05e8\u05d9\u05d5\u05ea \u05d5\u05d4\u05e7\u05d1\u05e6\u05d9\u05dd \u05e9\u05d4\u05df \u05db\u05d5\u05dc\u05dc\u05d5\u05ea \u05d7\u05d9\u05d9\u05d1\u05d9\u05dd \u05dc\u05d4\u05d9\u05d5\u05ea \u05e0\u05d9\u05ea\u05e0\u05d9\u05dd \u05dc\u05db\u05ea\u05d9\u05d1\u05d4 \u05e2\u05dc \u05d9\u05d3\u05d9 \u05e9\u05e8\u05ea \u05d4\u05d0\u05d9\u05e0\u05d8\u05e8\u05e0\u05d8 \u05db\u05d3\u05d9 \u05e9-Chamilo \u05d9\u05e4\u05e2\u05dc (\u05e7\u05d1\u05e6\u05d9\u05dd \u05e9\u05d4\u05d5\u05e2\u05dc\u05d5 \u05e2\u05dc \u05d9\u05d3\u05d9 \u05d4\u05de\u05e9\u05ea\u05de\u05e9, \u05e7\u05d1\u05e6\u05d9 HTML \u05e9\u05dc \u05d3\u05e3 \u05d4\u05d1\u05d9\u05ea,...). \u05d4\u05d3\u05d1\u05e8 \u05e2\u05e9\u05d5\u05d9 \u05dc\u05e8\u05de\u05d5\u05d6 \u05e2\u05dc \u05e9\u05d9\u05e0\u05d5\u05d9 \u05d9\u05d3\u05e0\u05d9 \u05d1\u05e9\u05e8\u05ea \u05e9\u05dc\u05da (\u05de\u05d7\u05d5\u05e5 \u05dc- \u05de\u05de\u05e9\u05e7 \u05d6\u05d4)."
+    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "\u05d7\u05dc\u05e7 \u05de\u05d4\u05e1\u05e4\u05e8\u05d9\u05d5\u05ea \u05d5\u05d4\u05e7\u05d1\u05e6\u05d9\u05dd \u05e9\u05d4\u05df \u05db\u05d5\u05dc\u05dc\u05d5\u05ea \u05d7\u05d9\u05d9\u05d1\u05d9\u05dd \u05dc\u05d4\u05d9\u05d5\u05ea \u05e0\u05d9\u05ea\u05e0\u05d9\u05dd \u05dc\u05db\u05ea\u05d9\u05d1\u05d4 \u05e2\u05dc \u05d9\u05d3\u05d9 \u05e9\u05e8\u05ea \u05d4\u05d0\u05d9\u05e0\u05d8\u05e8\u05e0\u05d8 \u05db\u05d3\u05d9 \u05e9-Chamilo \u05d9\u05e4\u05e2\u05dc (\u05e7\u05d1\u05e6\u05d9\u05dd \u05e9\u05d4\u05d5\u05e2\u05dc\u05d5 \u05e2\u05dc \u05d9\u05d3\u05d9 \u05d4\u05de\u05e9\u05ea\u05de\u05e9, \u05e7\u05d1\u05e6\u05d9 HTML \u05e9\u05dc \u05d3\u05e3 \u05d4\u05d1\u05d9\u05ea,...). \u05d4\u05d3\u05d1\u05e8 \u05e2\u05e9\u05d5\u05d9 \u05dc\u05e8\u05de\u05d5\u05d6 \u05e2\u05dc \u05e9\u05d9\u05e0\u05d5\u05d9 \u05d9\u05d3\u05e0\u05d9 \u05d1\u05e9\u05e8\u05ea \u05e9\u05dc\u05da (\u05de\u05d7\u05d5\u05e5 \u05dc- \u05de\u05de\u05e9\u05e7 \u05d6\u05d4).",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
