--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -277,7 +277,7 @@
     "E-mail": "\u0627\u0644\u0628\u0631\u064a\u062f",
     "Your company's name": "\u0627\u0633\u0645 \u0627\u0644\u0645\u0646\u0638\u0645\u0629",
     "Your company's activity": "\u0646\u0634\u0627\u0637\u0627\u062a \u0645\u0646\u0638\u0645\u062a\u0643",
-    "Your job's description": "Your job's description",
+    "Your job's description": "\u0648\u0635\u0641\u0643 \u0627\u0644\u0648\u0638\u064a\u0641\u064a",
     "Your company's home country": "\u0627\u0644\u062f\u0648\u0644\u0629 \u0627\u0644\u0627\u0645 \u0644\u0644\u0645\u0646\u0638\u0645\u0629",
     "Company city": "\u0627\u0644\u0645\u062f\u064a\u0646\u0629 \u0627\u0644\u062a\u064a \u062a\u0642\u0639 \u0641\u064a\u0647\u0627 \u0627\u0644\u0645\u0646\u0638\u0645\u0629",
     "Preferred contact language": "\u0644\u063a\u0629 \u0627\u0644\u062a\u0648\u0627\u0635\u0644 \u0627\u0644\u0645\u0641\u0636\u0644\u0629",
@@ -337,7 +337,7 @@
     "Link name": "\u0627\u0633\u0645 \u0627\u0644\u0631\u0627\u0628\u0637",
     "Show link on course homepage": "\u0623\u0638\u0647\u0631 \u0627\u0644\u0631\u0627\u0628\u0637 \u0641\u064a \u0627\u0644\u0635\u0641\u062d\u0629 \u0627\u0644\u0631\u0626\u0633\u064a\u0629",
     "Select a category": " \u0627\u062e\u062a\u0627\u0631 \u0627\u0644\u0641\u0626\u0629",
-    "Link's target": "Link's target",
+    "Link's target": "\u0647\u062f\u0641 \u0627\u0644\u0631\u0627\u0628\u0637",
     "Save link": "\u062d\u0641\u0638 \u0627\u0644\u0631\u0627\u0628\u0637",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -622,5 +622,6 @@
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
-    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Some directories and the files they include must be writeable by the web server in order for Chamilo to run (students uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)."
+    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Some directories and the files they include must be writeable by the web server in order for Chamilo to run (students uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
