--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -273,7 +273,7 @@
     "E-mail": "Correu electr\u00f2nic",
     "Your company's name": "Nom de l'empresa",
     "Your company's activity": "Sector",
-    "Your job's description": "Your job's description",
+    "Your job's description": "C\u00e0rrec a l'empresa",
     "Your company's home country": "Pa\u00eds",
     "Company city": "Ciutat",
     "Preferred contact language": "Quin idioma de contacte prefereix?",
@@ -333,7 +333,7 @@
     "Link name": "Nom de l'enlla\u00e7",
     "Show link on course homepage": "Mostrar l'enlla\u00e7 a la p\u00e0gina principal",
     "Select a category": "Seleccioneu una categoria",
-    "Link's target": "Link's target",
+    "Link's target": "Dest\u00ed d'enlla\u00e7",
     "Save link": "Guardar enlla\u00e7",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -599,5 +599,6 @@
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
-    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Alguns directoris i els arxius que contenen han de tenir habilitats els permisos d'escriptura al servidor web per tal que Chamilo pugui funcionar (enviament d'arxius per part dels estudiants, arxius html de la p\u00e0gina principal, ...). Aix\u00f2 pot suposar un canvi manual en el seu servidor (ha de realitzar-se fora d'aquesta interf\u00edcie)."
+    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Alguns directoris i els arxius que contenen han de tenir habilitats els permisos d'escriptura al servidor web per tal que Chamilo pugui funcionar (enviament d'arxius per part dels estudiants, arxius html de la p\u00e0gina principal, ...). Aix\u00f2 pot suposar un canvi manual en el seu servidor (ha de realitzar-se fora d'aquesta interf\u00edcie).",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
