--- a/assets/locales/da.json
+++ b/assets/locales/da.json
@@ -186,7 +186,6 @@
     "Printable version": "Udskriftsvenlig version",
     "CC website": "CC website",
     "Dear user": "K\u00e6re bruger",
-    "Your job's description": "Your job's description",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
     "Database name": "Database name",
@@ -230,7 +229,7 @@
     "Save category": "Save category",
     "Link name": "Link navn",
     "Show link on course homepage": "Vis link p\u00e5 hjemmesiden",
-    "Link's target": "Link's target",
+    "Link's target": "Linket \u00e5bnes i",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
@@ -450,5 +449,6 @@
     "Test email sent successfully": "Test email sent successfully",
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
-    "Destination of test e-mail": "Destination of test e-mail"
+    "Destination of test e-mail": "Destination of test e-mail",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
