--- a/assets/locales/eo.json
+++ b/assets/locales/eo.json
@@ -175,7 +175,6 @@
     "Step 3 - License": "Step 3 - License",
     "Printable version": "Presebla versio",
     "CC website": "CC website",
-    "Your job's description": "Your job's description",
     "Check database connection": "Kontroli datumbankan konekton",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -221,7 +220,7 @@
     "Save category": "Save category",
     "Link name": "Nomo",
     "Show link on course homepage": "En startpa\u011do",
-    "Link's target": "Link's target",
+    "Link's target": "Ligila celo",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
@@ -433,5 +432,6 @@
     "Test email sent successfully": "Test email sent successfully",
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
-    "Destination of test e-mail": "Destination of test e-mail"
+    "Destination of test e-mail": "Destination of test e-mail",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
