--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -239,7 +239,7 @@
     "Dear user": "\u06a9\u0627\u0631\u0628\u0631 \u06af\u0631\u0627\u0645\u06cc",
     "Your company's name": "\u0646\u0627\u0645 \u0634\u0631\u06a9\u062a \u0634\u0645\u0627",
     "Your company's activity": "\u0641\u0639\u0627\u0644\u06cc\u062a \u0634\u0631\u06a9\u062a \u0634\u0645\u0627",
-    "Your job's description": "Your job's description",
+    "Your job's description": "\u062a\u0648\u0636\u06cc\u062d\u0627\u062a \u0634\u063a\u0644 \u0634\u0645\u0627",
     "Your company's home country": "\u06a9\u0634\u0648\u0631 \u0645\u062d\u0644\u06cc \u0634\u0631\u06a9\u062a \u0634\u0645\u0627",
     "Company city": "\u0634\u0647\u0631 \u0634\u0631\u06a9\u062a",
     "Preferred contact language": "\u0632\u0628\u0627\u0646 \u062a\u0645\u0627\u0633 \u067e\u06cc\u0634\u0641\u0631\u0636",
@@ -294,7 +294,7 @@
     "Link name": "\u0646\u0627\u0645 \u067e\u06cc\u0648\u0646\u062f",
     "Show link on course homepage": "\u0646\u0645\u0627\u06cc\u0634 \u067e\u06cc\u0648\u0646\u062f \u062f\u0631 \u0635\u0641\u062d\u0647 \u0627\u0635\u0644\u06cc \u0622\u0645\u0648\u0632\u0634\u06cc",
     "Select a category": "\u0627\u0646\u062a\u062e\u0627\u0628 \u06cc\u06a9 \u062f\u0633\u062a\u0647",
-    "Link's target": "Link's target",
+    "Link's target": "\u0645\u0642\u0635\u062f \u067e\u06cc\u0648\u0646\u062f",
     "Save link": "\u0630\u062e\u06cc\u0631\u0647 \u067e\u06cc\u0648\u0646\u062f",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -532,5 +532,6 @@
     "Test email sent successfully": "Test email sent successfully",
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
-    "Destination of test e-mail": "Destination of test e-mail"
+    "Destination of test e-mail": "Destination of test e-mail",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
