--- a/assets/locales/id_ID.json
+++ b/assets/locales/id_ID.json
@@ -176,7 +176,6 @@
     "Printable version": "Versi cetak",
     "I accept": "Saya Setuju",
     "CC website": "CC website",
-    "Your job's description": "Your job's description",
     "Check database connection": "Periksa koneksi database",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -221,7 +220,7 @@
     "Save category": "Save category",
     "Link name": "Nama Link",
     "Show link on course homepage": "Tampilkan link di homepage",
-    "Link's target": "Link's target",
+    "Link's target": "Target Link",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
@@ -434,5 +433,6 @@
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
-    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Beberapa direktori dan file yang disertakan harus dapat ditulis/writeable oleh server web agar Chamilo berjalan (misal saat siswa meng-upload file dll).  Ini dapat saja membutuhkan perubahan sevara manual di server anda (diluar interface ini)."
+    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Beberapa direktori dan file yang disertakan harus dapat ditulis/writeable oleh server web agar Chamilo berjalan (misal saat siswa meng-upload file dll).  Ini dapat saja membutuhkan perubahan sevara manual di server anda (diluar interface ini).",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
