--- a/assets/locales/ko_KR.json
+++ b/assets/locales/ko_KR.json
@@ -158,7 +158,6 @@
     "Step 3 - License": "Step 3 - License",
     "Printable version": "\ud504\ub9b0\ud2b8 \ubc84\uc804",
     "CC website": "CC website",
-    "Your job's description": "Your job's description",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
     "Database name": "Database name",
@@ -201,7 +200,7 @@
     "Save category": "Save category",
     "Link name": "\ub9c1\ud06c \uba85",
     "Show link on course homepage": "\ud648\ud398\uc774\uc9c0\uc758 \ub9c1\ud06c \ubcf4\uae30",
-    "Link's target": "Link's target",
+    "Link's target": "\ub9c1\ud06c \ub300\uc0c1",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
@@ -408,5 +407,6 @@
     "Test email sent successfully": "Test email sent successfully",
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
-    "Destination of test e-mail": "Destination of test e-mail"
+    "Destination of test e-mail": "Destination of test e-mail",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
