--- a/assets/locales/nn_NO.json
+++ b/assets/locales/nn_NO.json
@@ -138,7 +138,6 @@
     "Warning!": "Warning!",
     "Step 3 - License": "Step 3 - License",
     "CC website": "CC website",
-    "Your job's description": "Your job's description",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
     "Database name": "Database name",
@@ -166,7 +165,6 @@
     "Demo": "Demo",
     "Save category": "Save category",
     "Link name": "Navn p\u00e5 lenke",
-    "Link's target": "Link's target",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
@@ -363,5 +361,6 @@
     "Test email sent successfully": "Test email sent successfully",
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
-    "Destination of test e-mail": "Destination of test e-mail"
+    "Destination of test e-mail": "Destination of test e-mail",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
