--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -266,7 +266,7 @@
     "Dear user": "Caro(a) utilizador(a)",
     "Your company's name": "Nome da empresa",
     "Your company's activity": "Actividade da empresa",
-    "Your job's description": "Your job's description",
+    "Your job's description": "Descri\u00e7\u00e3o de profiss\u00e3o",
     "Your company's home country": "Pa\u00eds onde se localiza a empresa?",
     "Company city": "Cidade da empresa",
     "Preferred contact language": "L\u00edngua de contato preferencial?",
@@ -325,7 +325,7 @@
     "Link name": "Nome da liga\u00e7\u00e3o",
     "Show link on course homepage": "Apresentar liga\u00e7\u00e3o/link na p\u00e1gina inicial dos cursos",
     "Select a category": "Selecione uma categoria",
-    "Link's target": "Link's target",
+    "Link's target": "Destino da Liga\u00e7\u00e3o/link",
     "Save link": "Guardar liga\u00e7\u00e3o",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -584,5 +584,6 @@
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
-    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Algumas directorias/pastas e ficheiros nelas inclu\u00eddas devem permitir serem escritos/gravados pelo servidor web para que o Chamilo possa funcionar correctamente (ficheiros enviados pelos utilizadores, ficheiros de p\u00e1ginas de in\u00edcio html (homepages), ...). Poder\u00e1 implicar uma modifica\u00e7\u00e3o manual no seu servidor (fora deste interface)."
+    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Algumas directorias/pastas e ficheiros nelas inclu\u00eddas devem permitir serem escritos/gravados pelo servidor web para que o Chamilo possa funcionar correctamente (ficheiros enviados pelos utilizadores, ficheiros de p\u00e1ginas de in\u00edcio html (homepages), ...). Poder\u00e1 implicar uma modifica\u00e7\u00e3o manual no seu servidor (fora deste interface).",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
