--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -269,7 +269,7 @@
     "Dear user": "Stimate utilizator",
     "Your company's name": "Numele companiei",
     "Your company's activity": "Sector",
-    "Your job's description": "Your job's description",
+    "Your job's description": "Pozi\u021bia \u00een companie",
     "Your company's home country": "Tara",
     "Company city": "Oras",
     "Preferred contact language": "Ce limb\u0103 de contactat preferati?",
@@ -329,7 +329,7 @@
     "Link name": "Textul pentru link",
     "Show link on course homepage": "Arata linkul pe pagina principala",
     "Select a category": "Selectionati o categorie",
-    "Link's target": "Link's target",
+    "Link's target": "Tinta linkului",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
@@ -588,5 +588,6 @@
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
-    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Unele foldere si fisierele pe care le includ trebuieb sa fie inscriptibile pentru serverul de web pentru ca platforma sa functioneze(fisiere uploadate de studenti, fisiere html pagina de inceput). Aceasta poate implica o schimbare manuala pe serverul dvs(in afara acestei interfete)."
+    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Unele foldere si fisierele pe care le includ trebuieb sa fie inscriptibile pentru serverul de web pentru ca platforma sa functioneze(fisiere uploadate de studenti, fisiere html pagina de inceput). Aceasta poate implica o schimbare manuala pe serverul dvs(in afara acestei interfete).",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
