--- a/assets/locales/sr_RS.json
+++ b/assets/locales/sr_RS.json
@@ -180,7 +180,6 @@
     "Step 3 - License": "Step 3 - License",
     "Printable version": "Verzija za \u0161tampu",
     "CC website": "CC website",
-    "Your job's description": "Your job's description",
     "Check database connection": "Proveri konekciju sa bazom",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -226,7 +225,7 @@
     "Save category": "Save category",
     "Link name": "Ime linka",
     "Show link on course homepage": "Prika\u017ei link na po\u010detnoj stranici",
-    "Link's target": "Link's target",
+    "Link's target": "Meta linka",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
@@ -445,5 +444,6 @@
     "Test email sent successfully": "Test email sent successfully",
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
-    "Destination of test e-mail": "Destination of test e-mail"
+    "Destination of test e-mail": "Destination of test e-mail",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
