--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -208,7 +208,6 @@
     "I accept": "Jag godk\u00e4nner",
     "CC website": "CC website",
     "Dear user": "Hej",
-    "Your job's description": "Your job's description",
     "Check database connection": "Kontrollera databas kopplingen",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -256,7 +255,7 @@
     "Save category": "Save category",
     "Link name": "L\u00e4nknamn",
     "Show link on course homepage": "Visa l\u00e4nk p\u00e5 hemsidan",
-    "Link's target": "Link's target",
+    "Link's target": "L\u00e4nkm\u00e5l",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
@@ -485,5 +484,6 @@
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
-    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "En del mappar och filer i vissa mappar m\u00e5ste vara skrivbara f\u00f6r webbservern f\u00f6r att Chamilo ska kunna fungera (anv\u00e4ndarnas filuppladdning, skapandet av kursdelar, mm). Det kan inneb\u00e4ra att r\u00e4ttigheterna m\u00e5ste st\u00e4llas in manuellt (utanf\u00f6r installationsprogrammet)."
+    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "En del mappar och filer i vissa mappar m\u00e5ste vara skrivbara f\u00f6r webbservern f\u00f6r att Chamilo ska kunna fungera (anv\u00e4ndarnas filuppladdning, skapandet av kursdelar, mm). Det kan inneb\u00e4ra att r\u00e4ttigheterna m\u00e5ste st\u00e4llas in manuellt (utanf\u00f6r installationsprogrammet).",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
