--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -172,7 +172,6 @@
     "Step 3 - License": "Step 3 - License",
     "Printable version": "\u0e01\u0e32\u0e23\u0e2d\u0e19\u0e38\u0e0d\u0e32\u0e15\u0e25\u0e34\u0e02\u0e2a\u0e34\u0e17\u0e18\u0e34\u0e4c\u0e49 \u0e02\u0e2d\u0e07\u0e40\u0e27\u0e2d\u0e23\u0e4c\u0e0a\u0e31\u0e48\u0e19\u0e17\u0e35\u0e48\u0e43\u0e0a\u0e49\u0e1b\u0e31\u0e08\u0e08\u0e38\u0e1a\u0e31\u0e19",
     "CC website": "CC website",
-    "Your job's description": "Your job's description",
     "Check database connection": "\u0e04\u0e25\u0e34\u0e01\u0e15\u0e23\u0e27\u0e08\u0e2a\u0e2d\u0e1a\u0e01\u0e32\u0e23\u0e40\u0e0a\u0e37\u0e48\u0e2d\u0e21\u0e15\u0e48\u0e2d\u0e01\u0e31\u0e1a\u0e10\u0e32\u0e19\u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -216,7 +215,7 @@
     "Save category": "Save category",
     "Link name": "\u0e0a\u0e37\u0e48\u0e2d\u0e40\u0e0a\u0e37\u0e48\u0e2d\u0e21\u0e42\u0e22\u0e07",
     "Show link on course homepage": "\u0e41\u0e2a\u0e14\u0e07\u0e01\u0e32\u0e23\u0e40\u0e0a\u0e37\u0e48\u0e2d\u0e21\u0e42\u0e22\u0e07\u0e43\u0e19\u0e42\u0e2e\u0e21\u0e40\u0e1e\u0e08\u0e27\u0e34\u0e0a\u0e32",
-    "Link's target": "Link's target",
+    "Link's target": "\u0e40\u0e0a\u0e37\u0e48\u0e2d\u0e21\u0e42\u0e22\u0e07\u0e15\u0e48\u0e2d\u0e44\u0e1b\u0e17\u0e35\u0e48",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
@@ -426,5 +425,6 @@
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
-    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Some directories and the files they include must be writeable by the web server in order for Chamilo to run (students uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)."
+    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Some directories and the files they include must be writeable by the web server in order for Chamilo to run (students uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
