--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -199,7 +199,6 @@
     "Step 3 - License": "Step 3 - License",
     "Printable version": "Yazd\u0131r\u0131labilir s\u00fcr\u00fcm",
     "CC website": "CC website",
-    "Your job's description": "Your job's description",
     "Check database connection": "Veritaban\u0131 ba\u011flant\u0131s\u0131n\u0131 kontrol ediniz.",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -245,7 +244,7 @@
     "Save category": "Save category",
     "Link name": "Ba\u011flant\u0131 ismi",
     "Show link on course homepage": "Ba\u011flant\u0131y\u0131 AnaSayfada g\u00f6ster",
-    "Link's target": "Link's target",
+    "Link's target": "Ba\u011flant\u0131n\u0131n Hedefi",
     "Save link": "Ba\u011flant\u0131y\u0131 kaydet",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
@@ -468,5 +467,6 @@
     "Test email sent successfully": "Test email sent successfully",
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
-    "Destination of test e-mail": "Destination of test e-mail"
+    "Destination of test e-mail": "Destination of test e-mail",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
