--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -196,7 +196,6 @@
     "I accept": "\u6211\u63a5\u53d7",
     "CC website": "CC website",
     "Dear user": "\u89aa\u611b\u7684\u4f7f\u7528\u8005",
-    "Your job's description": "Your job's description",
     "Check database connection": "\u6e2c\u8a66\u6578\u64da\u5eab\u9023\u7dda",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -243,7 +242,7 @@
     "Save category": "Save category",
     "Link name": "\u93c8\u63a5\u540d\u7a31",
     "Show link on course homepage": "\u4e3b\u9801\u4e2d\u986f\u793a",
-    "Link's target": "Link's target",
+    "Link's target": "\u9023\u7d50\u76ee\u6a19",
     "Link saved": "Link saved",
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
@@ -468,5 +467,6 @@
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
-    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "\u57f7\u884c\u67d0\u4e9b Chamilo \u529f\u80fd(\u5982\uff1a\u5b78\u751f\u4e0a\u8f09\u6a94\u6848\u3001\u9996\u9801 html \u6a94...)\u6642\uff0c\u90e8\u4efd\u76ee\u9304\u53ca\u5176\u4e2d\u7684\u6a94\u6848\u9808\u8a2d\u5b9a\u70ba\u53ef\u5beb\u5165\u3002\u4f60\u6216\u9808\u8981\u65bc\u4f60\u7684\u4f3a\u670d\u5668\u4e0a(\u672c\u5e73\u53f0\u4ee5\u5916)\u9032\u884c\u624b\u52d5\u8a2d\u5b9a\u3002"
+    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "\u57f7\u884c\u67d0\u4e9b Chamilo \u529f\u80fd(\u5982\uff1a\u5b78\u751f\u4e0a\u8f09\u6a94\u6848\u3001\u9996\u9801 html \u6a94...)\u6642\uff0c\u90e8\u4efd\u76ee\u9304\u53ca\u5176\u4e2d\u7684\u6a94\u6848\u9808\u8a2d\u5b9a\u70ba\u53ef\u5beb\u5165\u3002\u4f60\u6216\u9808\u8981\u65bc\u4f60\u7684\u4f3a\u670d\u5668\u4e0a(\u672c\u5e73\u53f0\u4ee5\u5916)\u9032\u884c\u624b\u52d5\u8a2d\u5b9a\u3002",
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
 }
